<resources>
    <string name="app_name">SCADA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="id_profesor">Id Profesor</string>
    <string name="id_salon">Salón</string>
    <string name="SCADA_meaning">Sistema de Control de Asistencia Docente al Aula</string>
    <string name="id_pisos">Piso</string>
    <string name="id_edificio">Edificio</string>
    <string name="asistencia"> Asistencia al Aula</string>
    <string name="app_login">SCADA:  LogIn</string>
    <string name="login">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="password">Password</string>
    <string name="close_sesion">Cerrar sesión</string>
    <string name="acept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="horario_del_dia">Horario del día</string>
    <string-array name="profesores_array">
        <item>001_Jafet</item>
        <item>002_Celedonio</item>
        <item>003_Zamorano</item>
        <item>004_Hilda</item>
    </string-array>

    <string-array name="salon_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="piso_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="edificio_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>

