<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">
    <!-- tools:showIn Tell us where its belong-->

    <!-- Edificio -->
    <LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <TextView
        android:text="@string/id_edificio"
        android:layout_width="@dimen/activity_hardcoded_dimention"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-light"
        android:gravity="center"

        />
    <Spinner
        android:id="@+id/id_edificios_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        />

    </LinearLayout>
    <!-- Piso -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <TextView
        android:text="@string/id_pisos"
        android:layout_width="@dimen/activity_hardcoded_dimention"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-light"
        android:gravity="center"

        />
    <Spinner
        android:id="@+id/id_pisos_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        />

    </LinearLayout>
    <!--Salon-->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <TextView
        android:text="@string/id_salon"
        android:layout_width="@dimen/activity_hardcoded_dimention"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-light"
        android:gravity="center"

        />
    <Spinner
        android:id="@+id/id_salones_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        />

    </LinearLayout>
    <!-- Profesor-->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <TextView
        android:text="@string/id_profesor"
        android:layout_width="@dimen/activity_hardcoded_dimention"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:fontFamily="sans-serif-light"
        android:gravity="center"

        />
    <Spinner
        android:id="@+id/id_profes_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-light"
        />

    </LinearLayout>
</LinearLayout>