<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:scaleType="centerCrop"
    android:background="@drawable/ipn_zac"
    >
    <LinearLayout
        android:id="@+id/layout_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:orientation="vertical"
        android:layout_above="@+id/btn_login_user"
        android:background="@drawable/edit_text_top"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fedtxt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >
            <EditText
                android:id="@+id/edtxt_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="text"
                android:textColor="@color/red"
                android:textColorHint="@color/red"

                android:textSize="30dp"
                android:layout_gravity="center_horizontal"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fedtxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >
            <EditText
                android:id="@+id/edtxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/red"
                android:textColor="@color/red"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="30dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/button_shape_preferible"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>